--- a/index.css
+++ b/index.css
@@ -66,3 +66,25 @@ button {
 .buttons button:hover {
   background-color: rgb(171, 169, 169);
 }
+
+@media (max-width: 768px) {
+  .container {
+    width: 100%;
+    height: 100vh;
+    border-radius: 0;
+  }
+
+  .buttons button {
+    max-width: 70px;
+    height: 70px;
+    font-size: 20px;
+  }
+
+  .container .operating {
+    display: ;
+    max-width: 400px;
+  }
+  .container .buttons {
+    max-width: 360px;
+  }
+}
