--- a/index.css
+++ b/index.css
@@ -80,11 +80,8 @@ button {
     font-size: 20px;
   }
 
-  .container .operating {
-    display: ;
-    max-width: 400px;
-  }
-  .container .buttons {
+  .container .buttons,
+  .operating {
     max-width: 360px;
   }
 }
